# photohash

./: .gitignore  .rustfmt.toml  Cargo.toml  ImageHash.hs  ImageHashMain.hs  Makefile  Pipeline.hs  README.md  build.rs  imagehash.cabal  imagehash.hs  rust-toolchain.toml  updateimagehash.hs
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: databasebench.rs
s/: ci  lint  outdated
src/: awake.rs  build.rs  config.rs  database.rs  index.rs  iopool.rs  lib.rs  main.rs  model.rs  mpmc.rs  output.rs  scan.rs  u63.rs
src/cmd/: benchmark.rs  broken.rs  db.rs  diff.rs  exif.rs  find.rs  hash.rs  index.rs  mod.rs  separate.rs  validate.rs
src/hash/: heic.rs  jpeg.rs  mod.rs
src/scan/: win.rs
tests/: hash.rs  rust.rs
tests/images/: Moonlight.heic
