[package]
name = "photohash"
version = "0.1.2"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.79"
build = "build.rs"
license = "GPL-3.0"
description = "Tool for detecting duplicate photos and diffing directories"
repository = "https://github.com/chadaustin/photohash"
keywords = ["jpeg", "heic", "perceptual", "hash"]
categories = ["command-line-utilities", "multimedia::images"]

[lib]
name = "photohash"
path = "src/lib.rs"

[[bin]]
name = "photohash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "662dbb50e63af15baa2909b7eac5b1b87e86a0aa"
dependencies = [
    "libheif:x64-windows",
]

[profile.release-with-debug]
inherits = "release"
debug = true

[build-dependencies]
vcpkg = "0.2.15"

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }

[[bench]]
name = "databasebench"
harness = false

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12", features = ["unstable"] }
batch-channel = "0.3.6"
blake3 = "1"
blockhash = "1.0.0"
chrono = "0.4.38"
directories = "5"
dunce = "1.0.5"
kamadak-exif = "0.5.5"
keepawake = "0.5.1"
futures = "0.3"
hex = "0"
image = { version = "0.25.2", features = [] }
image_hasher = "2.0.0"
itermore = { version = "0.7.1", features = ["array_chunks"] }
jwalk = "0.8.1"
ntapi = "0.4.1"
libheif-rs = "0.20.0"
rayon = "1.10.0"
rusqlite_migration = "1.2.0"
self_cell = "1.0.4"
static_assertions = "1.1.0"
structopt = "0.3.26"
thiserror = "1.0.48"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync"] }
turbojpeg = { version = "1.1.1", features = ["image"] }
walkdir = "2.5.0"
wild = "2.2.1"
winapi = { version = "0.3.9", features = ["heapapi"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(not(windows))'.dependencies]
rusqlite = "0.31.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
