[package]
name = "photohash"
version = "0.1.5"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.83"
build = "build.rs"
license = "GPL-3.0"
description = "Tool for detecting duplicate photos and diffing directories"
repository = "https://github.com/chadaustin/photohash"
keywords = ["jpeg", "heic", "perceptual", "hash"]
categories = ["command-line-utilities", "multimedia::images"]

[lib]
name = "photohash"
path = "src/lib.rs"

[[bin]]
name = "photohash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "7618666e79df4aca28a6d6343492f4b8af740e38"
dependencies = [
    "libheif:x64-windows",
]

[profile.release-with-debug]
inherits = "release"
debug = true

[build-dependencies]
vcpkg = "0.2.15"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "databasebench"
harness = false

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12", features = ["unstable"] }
batch-channel = "0.4.1"
blake3 = "1"
blockhash = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
digest = "0.10.7"
directories = "5"
dunce = "1.0.5"
futures = "0.3"
hex = "0.4.3"
image = { version = "0.25.2", features = [] }
image_hasher = "2.0.0"
indoc = "2.0.5"
itermore = { version = "0.7.1", features = ["array_chunks"] }
jwalk = "0.8.1"
kamadak-exif = "0.6.1"
keepawake = "0.5.1"
libheif-rs = { version = "1.0.2", default-features = false }
md-5 = "0.10.6"
ntapi = "0.4.1"
rayon = "1.10.0"
rusqlite_migration = "1.3.0"
self_cell = "1.0.4"
sha1 = "0.10.6"
sha2 = "0.10.8"
static_assertions = "1.1.0"
thiserror = "2.0.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync"] }
turbojpeg = { version = "1.1.1", features = ["image"] }
walkdir = "2.5.0"
wild = "2.2.1"
winapi = { version = "0.3.9", features = ["heapapi"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }

[target.'cfg(not(windows))'.dependencies]
rusqlite = "0.32.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
