name:                imagehash
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chad Austin <chad@chadaustin.me>
maintainer:          Chad Austin <chad@chadaustin.me>
category:            Utility
build-type:          Simple
cabal-version:       >=1.8

executable imagehash
  main-is: imagehash.hs
  build-depends: base, process, bytestring, base16-bytestring, directory, filepath, stm, stm-chans, cryptohash
  ghc-options: -threaded

executable updateimagehash
  main-is: updateimagehash.hs
  build-depends: base
  ghc-options: -threaded
